kubernetes/clusters/live/config/factorio/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: factorio-game-server
  namespace: factorio
spec:
  description: "Factorio: UDP 34197 game traffic (ingress + egress), RCON TCP 27015 from cluster subnet"
  endpointSelector: { }
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "34197"
              protocol: UDP
    - fromCIDR:
        - ${cluster_node_subnet}
      toPorts:
        - ports:
            - port: "27015"
              protocol: TCP
  egress:
    # Game server sends UDP responses and heartbeats to clients
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "34197"
              protocol: UDP
